templates/deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginx:latest
        lifecycle:
          postStart:
            exec:
              command:
              - /bin/bash
              - -c
              - echo "${app1}" > /usr/share/nginx/html/index.html
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: api
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
